--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "email": "aguzsupriyatna7@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "twig/twig": "^2.0"
+    },
     "autoload": {
     	"psr-4": {
             "App\\": "app"
